# ABTEdge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  TXMC635_DIRECT_MMAP_GUIDE.md  build.sh
backends/: AXIBackend.cpp  AXIBackend.hpp  BackendBase.cpp  BackendBase.hpp  PCIeBackend.cpp  PCIeBackend.hpp
cmake/: toolchain-arm64.cmake  toolchain-x86_64.cmake
common/: BackendConcept.hpp
src/: x86_64Tuner.cpp  x86_64Tuner.hpp
src/backends/: AXIBackend.hpp  BackendBase.cpp  BackendBase.hpp  CMakeLists.txt  DMARing.hpp  HugepageBuffer.cpp  HugepageBuffer.hpp  Intel_I210.hpp  InterfaceDiscovery.cpp  InterfaceDiscovery.hpp  PCIeBackend.cpp  PCIeBackend.hpp  ShmBackend.hpp  VendorDeviceDiscovery.cpp  VendorDeviceDiscovery.hpp
src/common/: BackendConcept.hpp  HugePageHelpers.hpp  I210Registers.hpp  PCIeDiscoveryConcept.hpp
src/test/: CMakeLists.txt  ShmTester.hpp  TXMC635Tester.hpp  WRENTester.cpp  WRENTester.hpp  csvTohppGenerator.py  dummyRegisters.hpp  dummy_hw_desc.csv  main.cpp
